# claude

./: .env.example  .gitignore  CLAUDE.md  HANDOFF-002-003.md  HANDOFF-008.md  HANDOFF-010-OPERATOR-RESUME.md  HANDOFF-011-AUTONOMOUS-OPS.md  HANDOFF-012-KIS-AUTONOMOUS-VERIFY.md  HANDOFF-013-AUTONOMOUS-DIAG-CHANNEL.md  HANDOFF-014-LIVE-DRYRUN-STARTED.md  HANDOFF-015-SPEC-004-JUDGMENT-POINTS.md  HANDOFF-016-SPEC-005-AUTONOMOUS-TUNER.md  HANDOFF-017-TUNER-SCHEDULING.md  HANDOFF-018-SPEC-012-TUNER-CANARY.md  HANDOFF-019-SPEC-014-CIRCUIT-BREAKER.md  HANDOFF-020-SPEC-015-FILL-INGESTION.md  HANDOFF-021-RECONCILE-AT-CLOSE.md  HANDOFF-022-SPEC-016-BACKTEST-COSTS.md  HANDOFF-023-SPEC-016-SLICE2-SINGLE-YARDSTICK.md  HANDOFF-024-SPEC-016-SLICE3-WALK-FORWARD.md  HANDOFF-025-SPEC-017-VOL-SIZING.md  HANDOFF-026-SPEC-017-SLICE2-BIDIRECTIONAL.md  HANDOFF-027-SPEC-017-SLICE2B-RISK-PARITY.md  HANDOFF-028-SPEC-017-SLICE3-CORRELATION.md  HANDOFF-029-SPEC-020-REGIME-ERC-WIRING.md  HANDOFF-030-SPEC-021-CROSS-SECTIONAL-RANKING.md  HANDOFF-031-SPEC-022-MIN-VARIANCE.md  HANDOFF-032-SPEC-023-QUALITY-FACTOR.md  HANDOFF-033-SPEC-024-MAX-SHARPE.md  HANDOFF-034-SPEC-025-COMPOSITE-FACTOR.md  HANDOFF-035-GO-LIVE-CANARY.md  HANDOFF-036-CANARY-CAPITAL-AND-PROMOTION-GATE.md  HANDOFF-037-SPEC-027-DEFLATED-SHARPE.md  HANDOFF-038-SPEC-028-EXECUTION-QUALITY.md  HANDOFF.md  LAST_RUN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: git_ground_truth.py  (+1 more)
.specify/: active-work.json  feature.json
.trigger/: design-now.txt
.verify/: last_design.md  last_result.json  last_result.md
automation/: go-live-canary.request
config/: canary_bands.toml  data.toml.example  judgment_tunables.toml  llm_kpi_thresholds.toml  llm_prices.toml  promotion.toml.example  synthetic_shocks.toml
deploy/: AUTO-DEPLOY.md  README.md  auto-invest-deploy.service  auto-invest-deploy.timer  auto-invest-tune.service  auto-invest-tune.timer  auto-invest.service  canary-live-rules.toml  go-live-canary.sh  run-tune.sh  run-worker.sh  sync-units.sh  vultr-userdata.sh
docs/: OPERATOR_DESIGN_KR.md  OPERATOR_GITHUB_ACTIONS_DESIGN.md  OPERATOR_GITHUB_ACTIONS_KR.md  OPERATOR_START.md  OPERATOR_START_NONDEV_KR.md  OPERATOR_VULTR_ONE_STEP_KR.md
scripts/: apply_rules_polkit_fix.sh  live_smoke.py  operator_design.sh  operator_install.sh  operator_one_time_setup.sh  repair_install.sh  set_secrets.sh
tests/: test_smoke.py
(+462 files in other folders)
