[project]
name = "auto-invest"
version = "0.1.0"
description = "Python-driven investment automation; Claude is invoked only for judgment-heavy decisions."
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler>=3.11.2",
    "exchange-calendars>=4.13.2",
    "httpx>=0.28.1",
    "hypothesis>=6.115.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "ta>=0.11.0",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]

[project.scripts]
auto-invest = "auto_invest.cli:app"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic API uses typer.Option(...) in default arguments;
# B008 ("function call in argument default") would force unidiomatic
# rewrites of every CLI signature.
"src/auto_invest/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
